# masscube

./: LICENSE  README.md  mass_cube.ipynb  pyproject.toml
.github/workflows/: deploy.yml  static.yml
set_parameters/: set_param_masscube.html
src/masscube/: __init__.py  alignment.py  annotation.py  classifier_builder.py  cli.py  feature_detection.py  feature_evaluation.py  feature_grouping.py  feature_table_utils.py  msjson.py  mzh5.py  mzjson.py  mzpkl.py  network.py  normalization.py  params.py  peak_detect.py  raw_data_utils.py  stats.py  utils_functions.py  visualization.py  workflows.py
src/masscube.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/masscube/data/: isotopes.txt  lipid_istd_neg.json  lipid_istd_pos.json  metabolite_istd_neg.json  metabolite_istd_pos.json
src/masscube/model/: peak_quality_NN.h5  peak_quality_NN.keras
src/masscube/templates/: parameters.csv  sample_table.csv
tests/: test.py
