[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masscube"
version = "1.2.5"
authors = [
  { name="Huaxu Yu", email="yhxchem@outlook.com" },
]
maintainers = [
  { name="Huaxu Yu", email="yhxchem@outlook.com" },
]
description = "Accurate and fast data processing for metabolomics"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC BY-NC 4.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.2.1",
    "pyteomics==4.6.3",
    "scipy>=1.10.1",
    "tqdm>=4.66.1",
    "lxml>=4.9.3",
    "matplotlib>=3.8.2",
    "ms_entropy==1.3.4",
    "scikit-learn>=1.3.2",
    "statsmodels>=0.14.2",
    "umap-learn>=0.5.7"
]

[project.scripts]
untargeted-metabolomics = "masscube:untargeted_metabolomics_workflow"
batch-processing = "masscube:batch_file_processing"
generate-sample-table = "masscube:generate_sample_table"
find-outliers = "masscube:run_evaluation"
build-classifier = "masscube:build_classifier"

[project.urls]
"Homepage" = "https://github.com/huaxuyu/masscube"